aded DOI of data

--- a/demo_reproducibility.ipynb
+++ b/demo_reproducibility.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "- Code from the original manuscript with permanent DOI: https://doi.org/10.11582/2021.00038\n",
     "- Containerized computational environment (Docker image on DockerHub): `kanduric/immuneml-v1:latest`\n",
-    "- Input data (~ 2.1 TB) with permanent DOI:\n",
+    "- Input data (~ 2.1 TB) with permanent DOI: https://doi.org/10.11582/2021.00064\n",
     "\n",
     "> **Note:** To reproduce the findings of the manuscript, the code, input data, and the docker image provided above have to be used in a similar fashion as demonstrated below. The files in this github repository are modified versions of the code used in the manuscript (fed with a small dataset and reduced iterations in ML training only for the sake of demonstration) and cannot be used for replication of findings."
    ],
