--- a/demo_reproducibility.ipynb
+++ b/demo_reproducibility.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "- Below, under each sub-heading (matching the descriptions of the manuscript), we re-run one cell of each heatmap on toy data (the output of which will make no sense as explained above). To check the reproducibility on your machine, clone this github repository and make sure that the **analyses** directory is empty before re-running the code snippets below either in a terminal or from this jupyter notebook. Note that jupyter notebook uses \"!\" symbol for running command-line commands. If you instead run these commands directly in a terminal, the \"!\" symbol has to be removed from the code snippets below.\n",
     "\n",
-    "- The stdout and stderr of each analysis snippet below are redirected to respective analysis directories of each jupyter notebook cell and only an output file from each analysis is printed to indicate successful execution. The stdout and stderr files can be located by inspecting the commands of each snippet."
+    "- The stdout and stderr of each analysis snippet are printed below each snippet whereas the output of each excution is redirected to respective analysis directories as indicated under each snippet. "
    ],
    "metadata": {
     "collapsed": false
